rules/dangling-ingress-backend/test/success_default_backend_exists/input/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend-ok
  namespace: default
spec:
  defaultBackend:
    service:
      name: ok-default
      port:
        number: 80
