rules/dangling-ingress-backend/test/success_default_backend_exists/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok-default
  namespace: default
spec:
  ports:
  - port: 80
